syntax = "proto3";
package OuterMessageCore;

//MessageType Response
message R2C_Login
{
	optional string address = 1;
	optional int64 key = 2;
}

//客户端发消息给Realm服 请求gate地址
//MessageType Request
//ResponseType R2C_Login
message C2R_Login
{
	required string account = 1;  // 帐号
	required string password = 2;  // 密码
}

//MessageType Response
message G2C_LoginGate
{
}

//MessageType Request
//ResponseType G2C_LoginGate
message C2G_LoginGate
{
	required int64 key = 1;  // 登录key 这个要Realm验证通过才有
}


//MessageType Response
message G2C_Ping
{
	int64 time = 1;
}

//MessageType Request
//ResponseType G2C_Ping
message C2G_Ping
{
}

//压力测试 收到这个协议的时候自定义操作 例如可以发条消息给map服
//MessageType Message
message C2G_TestPressure
{

}